<resources>
    <string name="app_name">CollegeExplore</string>
    <string name="studentlogin">User Login</string>
    <string name="maprecycleview">Colleges Menu</string>
    <string name="postquestion">Post Question</string>
    <string name="maps_all">News app</string>
    <string name="logo_desc">Nit Puducherry</string>
    <string name="search_hint">Search Colleges</string>
    <string name="map_near_by">Near By</string>
    <string name="map_filter">Filter</string>
    <string name="map_recent">Recently Viewed</string>
    <string name="card_back_title">Angry Red Android</string>
    <string name="card_back_description"><![CDATA[Lorem ipsum dolor sit]]></string>
    <string name="signed_in_fmt">%s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>
    <string-array name="myStringHome">
        <item></item>
        <item>Convocation Fee -->Closing date for Online Registration is 24-02-2016 </item>
        <item>Second Convocation Programme - Scheduled on 27-02-2016</item>
        <item>NIT Directors meeting with the President of India</item>
        <item>Walk-in Interview for JRF Positions on 04-03-2016 (Friday) at 9:30 AM </item>
        <item>NITs Scholars In-Residence Programme at Rashtrapati Bhavan</item>
        <item> Second Convocation Programme --> Important Instructions</item>
    </string-array>
    <string-array name="NewsNitArray">

    </string-array>
<string name="drawer_open">open the drawer colleges</string>
    <string name="drawer_close">close the drawer colleges</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="NitInfo">Nits home activity gateway</string>
    <string name="Nit_label">Nits</string>
    <string name="exam_overview">OverView</string>
    <string name="exam_howtoprepare">How to Prepare</string>
    <string name="imp_dates">Important Dates</string>
    <string name="Results">Results</string>
    <string name="fest_about">About</string>
    <string name="fest_event_list">Event List</string>
    <string name="fest_register">Register</string>
    <string name="fest_contact">Contact</string>
    <string name="Home_News_Notifications">News &amp; Notifications</string>
    <string name="Home_Carrer_Guidance">Carrer Guidance</string>
    <string name="tab_notifications">Notifications</string>
    <string name="nits_header">NITS</string>
    <string name="ques_answ">Ques&amp;Ans</string>
    <string name="Fests_colleg">Fests@Colleges</string>
    <string name="Exams">Exams</string>
    <string name="Admissions">Admissions</string>
    <string name="iits_header">IITS</string>
    <string name="news_college">News</string>
    <string name="deemed_univ">Deemed Univ</string>
    <string name="about_us">About Us</string>
    <string name="cutoff">Cutt off\'s</string>
    <string name="placements">Placements</string>
    <string name="fest">Fests</string>
    <string name="department">Department</string>
    <string name="facility">Facilities</string>
    <string name="clg_news">News</string>
    <string name="rank">Rank</string>
    <string name="review">Reviews</string>
    <string-array name="home_appicons">
        <item>   <string name="icon_colleges">Colleges</string></item>
        <item>    <string name="icon_news">News</string></item>
        <item>      <string name="icon_fests">Fests</string></item>
        <item>    <string name="icon_exams">Exams</string></item>

        <item>    <string name="icon_ranks">Ranks</string></item>
        <item>     <string name="icon_cutoff">Cutoff\'s</string></item>
        <item>     <string name="icon_placements">Placements</string></item>
    </string-array>
    <string-array name="v1_home_appicons">
    <item>   <string name="v1_icon_colleges">Colleges</string></item>
    <item>    <string name="v1_icon_news">News</string></item>
    <item>      <string name="v1_icon_fests">Fests</string></item>
    <item>    <string name="v1_icon_exams">Exams</string></item>

    <item>    <string name="v1_icon_ranks">Ranks</string></item>
    <item>     <string name="v1_icon_cutoff">Cutoff\'s</string></item>
        <item>     <string name="v1_icon_placements">Placements</string></item>
    <item>     <string name="v1_nav_notify">Notifiy</string></item>
<item>     <string name="v1_nav_profileedit">Profile</string></item>
        <item>     <string name="v1_nav_about">About Us</string></item>
        <item>     <string name="v1_nav_share">Share</string></item>
        <item>     <string name="v1_nav_old_look">Previous clgexp</string></item>
</string-array>
    <string-array name="fest_types">
        <item>All</item>
        <item>Technical</item>
        <item>Cultural</item>
        <item>Sports</item>

    </string-array>
<string name="user_name">Enter Name</string>
    <string name="UserMobileNo">Mobile No</string>
    <string name="permission_rationale_location">Access to the location service is required to give the  directions and more.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required to get more info.</string>
    <string-array name="Navigation_data_icons">
        <item>Home</item>
        <item>Clgs MapView</item>
        <item>Carrer Guidande</item>
        <item>NITS</item>
        <item>News @Colleges</item>
        <item>IITS</item>
        <item>Deemed University</item>
        <item>Quest&amp;Ans</item>
        <item>Fests</item>
        <item>Exams</item>
        <item>Admissions</item>


    </string-array>
    <string-array name="fests_filter">
        <item>"   All   "</item>
        <item>"Technical"</item>
        <item>"Cultural"</item>
        <item>"  NIT'S  "</item>
        <item>"  IIT'S  "</item>
        <item>"  IIIT'S  "</item>
        <item>DEEMED UNIV..</item>
        <item>"  CSE  "</item>
        <item>"  CIVIL  "</item>
        <item>"  ECE  "</item>
        <item>"  EEE  "</item>
        <item>"  MECH  "</item>
        <item>More Filters</item>


    </string-array>
    <string name="loading">Loading…</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_schedules">Schedules</string>
    <string name="text_music">Music</string>
    <string name="facebook_app_id">589203164821068</string>
    <string name="fb_login_protocol_scheme">fb589203164821068</string>
    <string name="server_client_id">902195432470-od39nbhe7k6ckpto72prds2o1dknqvet.apps.googleusercontent.com</string>
    <string name="banner_ad_unit_id">ca-app-pub-2627997485122907/3678766473</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>
    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string-array name="nav_item_activity_titles">
        <item>College Explore</item>
        <item>News</item>
        <item>Admissions</item>
        <item>Colleges</item>
        <item>Exams</item>
        <item>Fests</item>
        <item>Questions &amp; Answers</item>
        <item>Cutoff\'s &amp; Placements</item>
        <item>Ratings &amp; Rankings</item>
    </string-array>
    <string name="nav_home">Home</string>
    <string name="nav_news">News</string>
    <string name="nav_admission">Admissions</string>
    <string name="nav_clgs">Colleges</string>
    <string name="nav_exams">Exams</string>
    <string name="nav_carrerguid">Carrer Guidance</string>
    <string name="nav_chat">Speak to us</string>
    <string name="nav_fests">Fests</string>
    <string name="nav_ques_ans">Questions &amp; Answers</string>
    <string name="nav_cutoff_place">Cutoff\'s</string>
    <string name="nav_rat_rank">Rankings</string>
    <string name="nav_place"> Placements</string>
    <string name="nav_share">Share</string>
    <string name="nav_about">About Us</string>
    <string name="nav_profileedit">Profile Editing</string>
    <string name="nav_notify">Notifications</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="communicate">Communicate</string>
    <string name="settings">Settings</string>
    <string name="mission"><u>Mission</u></string>
    <string name="vision"><u>Vision</u></string>
    <string name="developers"><u>Developers :</u></string>
    <string name="the_choice_of_college_is_no_doubt_one_the_hardest_and_one_of_the_biggest_decision_of_one_s_life_no_one_would_want_to_take_the_wrong_step_we_at_college_explore_wish_to_help_you_out_in_this_overwhelming_and_ever_spiralling_decision_our_app_gives_you_the_most_reliable_content_packed_onto_a_user_friendly_and_interactive_user_interface_we_wish_to_grow_with_you_to_become_india_s_best_as_you_funnel_through_academia_and_grab_onto_the_profile_you_deserve">The choice of college is no doubt one the hardest and one of the biggest decision of one’s life. No one would want to take the wrong step. We at College Explore wish to help you out in this overwhelming and ever spiralling decision. Our app gives you the most reliable content packed onto a user-friendly and interactive User Interface. We wish to grow with you to become India’s best as you funnel through academia and grab onto the profile you deserve.</string>
    <string name="our_content_obtained_from_the_most_authentic_source_the_college_will_provide_you_information_about_the_college_placements_cut_off_faculty_current_affairs_and_much_more_so_that_you_associate_yourself_with_the_right_college">Our content obtained from the most authentic source, the collegeexplore, will provide you information about the colleges ,placements, cut-off, current affairs and much more- so that you associate yourself with the right college.</string>
    <string name="our_vision_is_to_empower_students_to_make_their_own_correct_choices_in_life_in_a_faster_better_and_wiser_fashion">Our vision is to empower students to make their own correct choices in life in a faster, better and wiser fashion.</string>
    <string name="dande_reddy_prasad_balaji_yanam_damoji_pathivada">Dande Reddy Prasad,Siva Ganesh,Damoji Pathivada</string>
    <string name="nit_s">"   NIT\'s   "</string>
    <string name="iit_s">"   IIT\'s   "</string>
    <string name="all">"   All   "</string>
    <string name="nits">"   NITs   "</string>
    <string name="iits">"   IITs   "</string>
    <string name="deemed_universities">Deemed Universities</string>
    <string name="iiit_s">"  IIIT\'s  "</string>
    <string name="more_filters">More Filters</string>
    <string name="register_to_collegeexplore">Register to CollegeExplore</string>
    <string name="emailid">EmailID</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="register">Register</string>
    <string name="contact_us"><u>Contact Us</u></string>
</resources>