<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    android:id="@+id/carrerGuidance_layout_upper">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:background="@color/white"
        android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:textSize="20dp"
    android:textStyle="bold"
    android:text="@string/register_to_collegeexplore"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
          >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/email_name"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/emailid"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/user_password"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
  >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/mobile_number"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"/>

        </android.support.design.widget.TextInputLayout>
        <!-- <android.support.design.widget.TextInputLayout

             android:layout_width="match_parent"
             android:layout_height="wrap_content">

         <EditText
             android:id="@+id/UserMobileNo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="15dip"
             android:paddingRight="15dip"
             android:layout_margin="10dp"
             android:hint="@string/UserMobileNo" />
         </android.support.design.widget.TextInputLayout>
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

             <EditText
                 android:id="@+id/EmailLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="15dip"
                 android:paddingRight="15dip"
                 android:layout_margin="10dp"
                 android:hint="Email ID" />

         </android.support.design.widget.TextInputLayout>-->


        <Button android:id="@+id/submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:elevation="2dp"
            android:textColor="@color/white"
            android:layout_marginTop="15dip"
            android:background="@color/app_theme"
            android:layout_margin="25dp"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
          >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/OTP_VALUE"
                android:visibility="gone"
                android:layout_margin="10dp"
                android:inputType="numberPassword"
                android:layout_height="wrap_content"
                android:hint="@string/enter_otp"/>

        </android.support.design.widget.TextInputLayout>
        <Button android:id="@+id/registerButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:elevation="2dp"
            android:textColor="@color/white"
            android:visibility="gone"
            android:layout_marginTop="15dip"
            android:background="@color/app_theme"
            android:layout_margin="25dp"/>

    </LinearLayout>



</LinearLayout>
    <ProgressBar android:indeterminate="true"
        android:layout_width="50dp" android:layout_height="50dp"
        android:id="@+id/marker_progress" style="?android:attr/progressBarStyle"
        android:layout_gravity="center"

        android:layout_centerInParent="true"
        android:theme="@style/AppTheme.AppAccent"
        android:visibility="gone"
        />

</RelativeLayout>
